app/static/css/style.css
/***** Basic Styles *****/

body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    font-weight: 300;
    color: #fff;
    line-height: 30px;
    text-align: center;
}

strong { font-weight: 500; }

a, a:hover, a:focus {
	color: #de615e;
	text-decoration: none;
    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
}

h1 {
	margin-top: 10px;
	font-size: 38px;
    font-weight: 100;
    color: #555;
    line-height: 50px;
}

h3 {
	font-size: 22px;
    font-weight: 300;
    color: #555;
    line-height: 30px;
}

img { max-width: 100%; }

::-moz-selection { background: #de615e; color: #fff; text-shadow: none; }
::selection { background: #de615e; color: #fff; text-shadow: none; }

/***** Media queries *****/

@media (min-width: 992px) and (max-width: 1199px) {}

@media (min-width: 768px) and (max-width: 991px) {}

@media (max-width: 767px) {

    .inner-bg { padding: 60px 0 110px 0; }

}

@media (max-width: 415px) {

    h1, h2 { font-size: 32px; }

}

/***** Box Content *****/

.inner-bg {
    padding: 100px 0 170px 0;
}

.top-content .text {
	color: #fff;
}

.top-content .text h1 { color: #fff; }

.top-content .description {
	margin: 20px 0 10px 0;
}

.top-content .description p { opacity: 0.8; }

.top-content .description a {
	color: #fff;
}
.top-content .description a:hover,
.top-content .description a:focus { border-bottom: 1px dotted #fff; }

.form-box {
	margin-top: 35px;
}

.form-top {
	overflow: hidden;
	padding: 0 25px 15px 25px;
	background: rgba(0, 0, 0, 0.35);
	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
	text-align: left;
}

.form-top-left {
	float: left;
	width: 75%;
	padding-top: 25px;
}

.form-top-left h3 { margin-top: 0; color: #fff; }
.form-top-left p { opacity: 0.8; color: #fff; }

.form-top-right {
	float: left;
	width: 25%;
	padding-top: 5px;
	font-size: 66px;
	color: #fff;
	line-height: 100px;
	text-align: right;
	opacity: 0.3;
}

.form-bottom {
	padding: 25px 25px 30px 25px;
	background: rgba(0, 0, 0, 0.35);
	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
	text-align: left;
    margin-bottom: 20px;
}

.form-bottom .points { color: #fff; }

.form-bottom form textarea {
	height: 100px;
}

.form-bottom form button.btn {
	width: 100%;
}

.form-bottom form .input-error {
	border-color: #de615e;
}

.form-bottom .form-calc p {
    opacity: 0.8;
}

/***** Score Styles *****/

.form-calc {
    text-align:center;
}

.counter {
    color: #6ae368;
    font-weight: bold;
}

.classification {
    color: #6ae368;
    font-weight: inherit;
    margin-top: 35px;
}

.more-info-anchor-wrapper {
   margin-bottom: 550px;
}

.btn-circle {
    padding: 3px 16px;
    border: 2px solid #8e8e8e;
    border-radius: 100%;
    font-size: 45px;
}

#more-info-anchor {
    display: none;
    color: #6ae368;
}

#more-info-anchor:hover {
    border-color: #6ae368;
}

#playlists-info h2 {
    margin-top: 50px;
    margin-bottom: 70px;
}

.playlists-wrapper {
    background-color: #232323;
}

#playlists .playlist {
    min-height: 360px;
}

#playlists .playlist p {
    font-family: Helvetica;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

#playlists img {
    min-height: 276.656px;
}

#artists-info-anchor,
#graphs-info-anchor {
    float: left;
    color: #de615e;
    border-color: #444444;
    font-size: 30px;
    margin-top: -25px;
    margin-left: 270px;
}

#artists-info-anchor:hover,
#graphs-info-anchor:hover {
    color: #de615e;
    border-color: #de615e;
}

#artists-info {
    margin-bottom: 15px;
}

#artists-info img{
    max-height: 250px;
    border-radius: 100%;
    margin: auto;
}

#artists-info h2{
    text-align: center;
    margin-top: 50px;
    margin-bottom: 50px;
}

#artists-info h3{
    text-align: center;
    margin-bottom: 75px;
    color: white;
}

.graphs-wrapper {
    background-color: #232323;
}

#graphs-info h2 {
    margin-top: 50px;
    margin-bottom: 70px;
    padding: 0px 330px;
}

#graphs > div {
    height: 600px;
    width: 1200px;
    margin: auto;
    margin-bottom: 30px;
}

/***** About Styles *****/

a#about {
    color: #fff;
    background-color: #b5b5b5;
    border-color: #b5b5b5;
    text-align:left;
}

/***** Footer Styles *****/

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 30px;
    background-color: rgba(0, 0, 0, 0.35);
    text-align: center;
    z-index: 15;
}

.footer a {
    font-family: 'Roboto', sans-serif;
    color: #8e8e8e;
}

.footer a:hover {
    color: white;
}

